.k3s/argus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webargus
  namespace: webargus
  labels:
    app: webargus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webargus
  template:
    metadata:
      labels:
        app: webargus
    spec:
      containers:
        - name: webargus
          image: nginx:latest # Will be replaced by CI/CD
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "50Mi"
              cpu: "50m"
            requests:
              memory: "50Mi"
              cpu: "50m"
