.k3s/argus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webargus-service
  namespace: webargus
spec:
  selector:
    app: webargus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
