.k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webargus-ingress
  namespace: webargus
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cert-manager
spec:
  rules:
    - host: argus.service.glaucus.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webargus-service
                port:
                  number: 80
  tls:
    - hosts:
        - argus.service.glaucus.net
      secretName: sms-service-tls
